@@ -47,6 +47,8 @@ VERSION 2.2.3
       files which incorrectly have the same MusicBrainz unique identifier.
 
   BUGFIXES:
+    * Fixed playback of some streams causing the progress slider to show 
+      garbage track length and position values like -322:0-35:0-59.
     * Prevent a crash when loading PLS playlists with invalid filepaths.
     * Fixed scrolling crashes with the cover manager. (BR 224000)
     * Fixed a bug that was deleting files when using "Move to collection"
